Rename skeleton to base.html and add auth url and templates

--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -1,6 +1,6 @@
-{% extends "skeleton.html" %}
+{% extends "base.html" %}
 
-{% block "content" %}
+{% block content %}
 <a href="{% url "add_event" %}">Proposer un événement</a>
 
 <h1>Evénements futurs</h1>
