--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block "title" %}UrLab{% endblock %}</title>
+  <title>{% block title %}UrLab{% endblock %}</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/normalize.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/css/foundation.min.css">
@@ -37,7 +37,7 @@
     </section>
   </nav>
 
-  {% block "content" %}
+  {% block content %}
   {% endblock %}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/vendor/jquery.js"></script>
