--- a/events/templates/add_event.html
+++ b/events/templates/add_event.html
@@ -1,6 +1,6 @@
-{% extends "skeleton.html" %}
+{% extends "base.html" %}
 
-{% block "content" %}
+{% block content %}
 <form action="{% url "add_event" %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
