Fix django admin templates and add fake registration

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -36,6 +36,7 @@
           <li><a href="{% url "logout" %}">Logout</a></li>
         {% else %}
           <li><a href="{% url "login" %}">Login</a></li>
+          <li><a href="{% url "register" %}">Register</a></li>
         {% endif %}
       </ul>
     </section>
