--- a/incubator/templates/skeleton.html
+++ b/incubator/templates/skeleton.html
@@ -35,7 +35,9 @@
             </div>
         </nav>
 
+        <div class="container">
         {% block "content" %}
         {% endblock %}
+        </div>
     </body>
 </html>
