Fix "content" block

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -21,7 +21,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> 
+                        <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="/">UrLab</a>
                 </div>
@@ -36,7 +36,7 @@
         </nav>
 
         <div class="container">
-        {% block "content" %}
+        {% block content %}
         {% endblock %}
         </div>
     </body>
