--- a/events/templates/add_event.html
+++ b/events/templates/add_event.html
@@ -1,8 +1,12 @@
-{% extends "skeleton.html" %}
+{% extends "base.html" %}
 {% load bootstrap3 %}
 
+{% block "head" %}
+    {{ form.media  }}
+{% endblock %}
+
 {% block content %}
-<form action="{% url "add_event" %}" method="post">
+<form action="{% url "add_event" %}" method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
