Add staatic page with flatpage django app

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -12,8 +12,8 @@
         {% bootstrap_css %}
         {% bootstrap_javascript jquery=1 %}
         <link href="{% static "css/style.css" %}" rel="stylesheet">
-        <title>{% block "title" %}UrLab{% endblock %}</title>
-        {% block "head" %}{% endblock %}
+        <title>{% block title %}UrLab{% endblock %}</title>
+        {% block head %}{% endblock %}
     </head>
     <body>
 
