--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -39,8 +39,18 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
-                            <li class="{% ifcontains "/auth/logout" %}active{% endifcontains %}">
-                                <a href="{% url "logout" %}?next=/">{{user.username}} - Logout</a>
+                            <li class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.username}} <span class="caret"></span></a>
+                              <ul class="dropdown-menu">
+                                <li><a href="{% url "profile" %}">Profil</a></li>
+                                <li><a href="{% url "change_balance" %}">Ardoise</a></li>
+                                {% if user.is_staff %}
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/admin">Administration</a></li>
+                                {% endif %}
+                                <li role="separator" class="divider"></li>
+                                <li><a href="{% url "logout" %}?next=/">Déconnexion</a></li>
+                              </ul>
                             </li>
                         {% else %}
                             <li class="{% ifcontains "/auth/login" %}active{% endifcontains %}">
