--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<a href="">Proposer un projet</a>
+<a href="{% url "add_project" %}">Proposer un projet</a>
 
 <h1>Projets</h1>
 
