--- a/projects/templates/add_project.html
+++ b/projects/templates/add_project.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load static %}
 
-{% block "head" %}
+{% block head %}
     {{ form.media  }}
+    <link href="{% static "css/bootstrap-multiselect.css" %}" rel="stylesheet">
+    <script type="text/javascript" src="{% static "js/bootstrap-multiselect.js" %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -15,4 +18,23 @@
     </button>
     {% endbuttons %}
 </form>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#id_participants').multiselect({
+            enableFiltering: true,
+            filterBehavior: 'text',
+            buttonWidth: '100%',
+        });
+    });
+    $(document).ready(function() {
+        $('#id_dependencies').multiselect({
+            enableFiltering: true,
+            filterBehavior: 'text',
+            disableIfEmpty: true,
+            buttonWidth: '100%',
+        });
+    });
+</script>
+
 {% endblock %}
