move balance value before the message.

--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -6,6 +6,7 @@
 <h1>{{user.username}}</h1>
 <p>
     {{user.email}}<br>
+    Balance: {{user.balance}}€ <a href="{% url 'change_balance' %}">Changer</a><br>
     {% if user.balance < 0 %}
     <div class="alert alert-danger" role="alert"><strong>Solde négatif !</strong> Ne dépensez plus et rechargez vite !</div>
     {% elif user.balance < 5 %}
@@ -13,7 +14,6 @@
     {% elif user.balance > 50 %}
     <div class="alert alert-success" role="alert"><strong>Wow !</strong> Ca en fait une somme ça !</div>
     {% endif %}
-    {{user.balance}}€<a href="{% url 'change_balance' %}">Changer</a><br>
 
     {% if user.has_key %}
     You have a key :) Plase contact mainteneur@urlab.be if it is not the case
