--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -6,7 +6,16 @@
 <h1>{{project.title}}</h1>
 <p>
     Etat : {{project.get_status_display}}<br>
-    Mainteneur : {{project.maintainer.username}}
+    Mainteneur : <a href="">{{project.maintainer.username}}</a><br>
+    Prticipant{{project.participants.all|pluralize}}:
+    {% for participant in project.participants.all %}
+    <a href="">{{participant.username}}</a>
+    {% empty %}
+    Oh, il n'y a aucun participant :'(
+    {% endfor %}</br>
+    {% if user != project.maintainer and user not in project.participants.all %}
+    <a href="{% url 'project_add_participation' project.id%}">Je participe</a>
+    {% endif %}
 </p>
 <p>Description : {{project.short_description}}</p>
 <div class="progress">
