--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -40,16 +40,19 @@
                     <ul class="nav navbar-nav navbar-right">
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}} <span class="caret"></span></a>
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                {% bootstrap_icon "user" %}
+                                {{request.user.username}} <span class="caret"></span>
+                              </a>
                               <ul class="dropdown-menu">
-                                <li><a href="{% url "profile" %}">Profil</a></li>
-                                <li><a href="{% url "change_balance" %}">Ardoise</a></li>
+                                <li><a href="{% url "profile" %}">{% bootstrap_icon "user" %} Profil</a></li>
+                                <li><a href="{% url "change_balance" %}">{% bootstrap_icon "euro" %} Ardoise</a></li>
                                 {% if request.user.is_staff %}
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/admin">Administration</a></li>
                                 {% endif %}
                                 <li role="separator" class="divider"></li>
-                                <li><a href="{% url "logout" %}?next=/">Déconnexion</a></li>
+                                <li><a href="{% url "logout" %}?next=/">{% bootstrap_icon "disconnect" %}Déconnexion</a></li>
                               </ul>
                             </li>
                         {% else %}
