--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
 <h1>
     UrLab ?
     <a href="" class="btn btn-success">
+        {% bootstrap_icon "ok" %}
         C'est ouvert !
     </a>
 </h1>
