Add some content to the homepage

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -35,6 +35,12 @@
                         <li class="{% ifcontains "/events/" %}active{% endifcontains %}">
                             <a href="{% url "events_home" %}">Evénements</a>
                         </li>
+                        <li class="{% ifcontains "/wiki/" %}active{% endifcontains %}">
+                            <a href="">Wiki</a>
+                        </li>
+                        <li class="{% ifcontains "/pamela/" %}active{% endifcontains %}">
+                            <a href="">Pamela</a>
+                        </li>
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
