--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -2,27 +2,38 @@
 {% load bootstrap3 %}
 
 {% block content %}
-<h1>
-    UrLab ?
-    <a href="" class="btn btn-success">
-        {% bootstrap_icon "ok" %}
-        C'est ouvert !
-    </a>
-</h1>
+<div class="row">
+  <div class="col-md-8">
+        <h1>
+            UrLab ?
+            <a href="" class="btn btn-success">
+                {% bootstrap_icon "ok" %}
+                C'est ouvert !
+            </a>
+        </h1>
 
-<p>UrLab est le hackerspace de l’ULB. Il s’agit d'un laboratoire ouvert par et pour les étudiants, où l’on met à disposition une infrastructure pour qu’ils puissent y exprimer leur créativité de manière collaborative.</p>
+        <p>UrLab est le hackerspace de l’ULB. Il s’agit d'un laboratoire ouvert par et pour les étudiants, où l’on met à disposition une infrastructure pour qu’ils puissent y exprimer leur créativité de manière collaborative.</p>
 
-<p>UrLab permet aux étudiants de l’ULB ayant un intérêt pour l’informatique, l’électronique ou d’une manière générale la technologie, de se rencontrer, partager et collaborer. Il peut être comparé à un laboratoire ouvert. Les thèmes abordés peuvent avoir un lien direct avec les cours mais pas nécessairement, le but étant d’explorer d’autres domaines, ou d’en approfondir. Quelques exemples sont présentés sur la page projets</p>
+        <p>UrLab permet aux étudiants de l’ULB ayant un intérêt pour l’informatique, l’électronique ou d’une manière générale la technologie, de se rencontrer, partager et collaborer. Il peut être comparé à un laboratoire ouvert. Les thèmes abordés peuvent avoir un lien direct avec les cours mais pas nécessairement, le but étant d’explorer d’autres domaines, ou d’en approfondir. Quelques exemples sont présentés sur la page projets</p>
 
-<h1>Un hackerspace ?</h1>
+        <h1>Un hackerspace ?</h1>
 
-<p>Le hackerspace est composé de trois facettes :
-<ul>
-    <li>Un atelier, lieu de travail où chacun peut construire quelque chose en profitant des installations présentes ;</li>
-    <li>Un lieu de socialisation, où des groupes de gens peuvent se rencontrer et échanger des idées et collaborer sur des projets ;</li>
-    <li>L’organisation régulière de conférences et de présentations liées à l'informatique et à la technologie en général.</li>
-</ul>
-</p>
+        <p>Le hackerspace est composé de trois facettes :
+        <ul>
+            <li>Un atelier, lieu de travail où chacun peut construire quelque chose en profitant des installations présentes ;</li>
+            <li>Un lieu de socialisation, où des groupes de gens peuvent se rencontrer et échanger des idées et collaborer sur des projets ;</li>
+            <li>L’organisation régulière de conférences et de présentations liées à l'informatique et à la technologie en général.</li>
+        </ul>
+        </p>
 
-<p>UrLab est un lieu de rencontre pour les étudiants intéressés par la technologie. C’est un lieu où l’on développe ses projets et l’on partage ses connaissances par l’intermédiaire d’ateliers et de conférences.</p>
+        <p>UrLab est un lieu de rencontre pour les étudiants intéressés par la technologie. C’est un lieu où l’on développe ses projets et l’on partage ses connaissances par l’intermédiaire d’ateliers et de conférences.</p>
+  </div>
+  <div class="col-md-4 well">
+    <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
+    <iframe width='100%' height='300px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/c4ptaincrunch.o1n42mc8/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYzRwdGFpbmNydW5jaCIsImEiOiJUdWVRSENNIn0.qssi5TBLeBinBsXkZKiI6Q#14/50.812919/4.38443799999999'></iframe>
+    <p>
+    Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="">Pamela</a></p>
+  </div>
+</div>
+
 {% endblock %}
