Add users to pamela

--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 
-Updated {{updated}}s ago<br>
-{% for mac in maclist %}
+Updated {{updated}}s ago<br><br>
+
+Lol<br>
+{% for mac in unknown_mac %}
     {{mac}}<br>
+{% endfor %}
+
+LOL<br>
+{% for user in users %}
+    {{user}}<br>
 {% endfor %}
 
 {% endblock %}
