--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -2,16 +2,39 @@
 
 {% block content %}
 
-Updated {{updated}}s ago<br><br>
+<div class="page-header">
+  <h1>Pamela <small>Mis à jour il y a {{updated}} secondes</small></h1>
+</div>
 
-Lol<br>
-{% for mac in unknown_mac %}
-    {{mac}}<br>
-{% endfor %}
-
-LOL<br>
-{% for user in users %}
-    {{user}}<br>
-{% endfor %}
-
+<div class="row">
+    <div class="col-md-4">
+        <h3>Membres à UrLab</h3>
+        {% for user in users %}
+            {{user}}<br>
+        {% endfor %}
+    </div>
+    <div class="col-md-4">
+        <h3>Machines inconnues</h3>
+        {% for mac in unknown_mac %}
+            {{mac}}<br>
+        {% endfor %}
+    </div>
+    <div class="col-md-4">
+        <h3>Ajoutez votre machine</h3>
+        <p>Tapez ceci dans un terminal pour avoir une liste de vos MAC adress : </p>
+        <pre>ip addr show</pre>
+        <p>Et ajoutez votre machine à Pamela : </p>
+        <form>
+          <div class="form-group">
+            <label for="mac">MAC address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="MAC address">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Nom de la machine</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Nom de la machine">
+          </div>
+          <button type="submit" class="btn btn-info">Ajouter à Pamela</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
