--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -11,7 +11,12 @@
         <h3>Membres à UrLab</h3>
         <ul>
         {% for user in users %}
-            <li>{{user}}</li>
+            <li>
+                {{user}}
+                {% if user.has_key %}
+                    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                {% endif %}
+            </li>
         {% endfor %}
         </ul>
     </div>
