Add pamela to the menubar

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -38,8 +38,8 @@
                         <li class="{% ifcontains "/wiki/" %}active{% endifcontains %}">
                             <a href="">Wiki</a>
                         </li>
-                        <li class="{% ifcontains "/pamela/" %}active{% endifcontains %}">
-                            <a href="">Pamela</a>
+                        <li class="{% ifcontains "/space/pamela" %}active{% endifcontains %}">
+                            <a href="{% url "pamela_list" %}">Pamela</a>
                         </li>
 
                     </ul>
