--- a/events/templates/event_time.html
+++ b/events/templates/event_time.html
@@ -1,9 +1,14 @@
 <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
 
 {% if event.has_no_duration %}
-    Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}} à {{event.place}}<br>
+    Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}}.
 {% elif event.is_only_a_day %}
-    Le {{event.start|date:"l d F Y"}}, de {{event.start|date:"H:m"}} à {{event.stop|date:"H:m"}} à {{event.place}}<br>
+    Le {{event.start|date:"l d F Y"}}, de {{event.start|date:"H:m"}} à {{event.stop|date:"H:m"}}.
 {% else %}
-    Du {{event.start}} au {{event.stop}} à {{event.place}}<br>
+    Du {{event.start|date:"l d F Y à H:i"}} au {{event.stop|date:"l d F Y à H:i"}}.<br>
+{% endif %}
+
+{% if event.place %}
+<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+{{event.place}}<br>
 {% endif %}
