--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -1,26 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-<a href="{% url "add_event" %}">Proposer un événement</a>
 
-<h1>
-    <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-    Evénements futurs
-</h1>
-{% if future %}
-    {% for event in future %}
+<div class="page-header">
+  <h1>Événements à UrLab</h1>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h1>
+        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+        Evénements futurs
+    </h1>
+    {% if future %}
+        {% for event in future %}
+            <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
+            {% include "event_time.html" %}
+        {% endfor %}
+        <p><br><a href="{% url "add_event" %}">Proposer un événement</a></p>
+    {% else %}
+    Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
+    {% endif %}
+
+  </div>
+  <div class="col-md-6">
+      <h1>
+        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+        Evénements passés
+    </h1>
+    {% for event in past %}
         <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
         {% include "event_time.html" %}
     {% endfor %}
-{% else %}
-Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
-{% endif %}
-<h1>
-    <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-    Evénements passés
-</h1>
-{% for event in past %}
-    <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
-    {% include "event_time.html" %}
-{% endfor %}
+  </div>
+</div>
+
+
+
+
 {% endblock %}
