--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -3,26 +3,57 @@
 
 {% block content %}
 
-<h1>{{project.title}}</h1>
-<p>
-    Etat : {{project.get_status_display}}<br>
+<ol class="breadcrumb">
+  <li><a href="/">UrLab</a></li>
+  <li><a href="{% url "projects_home" %}">Projets</a></li>
+  <li class="active">{{project.title}}</li>
+</ol>
+
+<div class="page-header">
+  <h1>{{project.title}} <small>{{project.short_description}}</small></h1>
+</div>
+
+<div class="row">
+  <div class="col-md-4 col-md-push-8">
+    {% if project.status == 'i' %}
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{project.progress}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:{{project.progress}}%">
+              {{project.progress}}%
+          </div>
+        </div>
+    {% elif project.status == 'f' %}
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>  Fini
+          </div>
+        </div>
+    {% else %}
+        <div class="progress">
+            <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
+            Proposition de projet
+          </div>
+        </div>
+    {% endif %}
     Mainteneur : <a href="{% url 'user_profile' project.maintainer.username %}">{{project.maintainer.username}}</a><br>
-    Prticipant{{project.participants.all|pluralize}}:
+    {% if project.participants.all %}
+        Participant{{project.participants.all|pluralize}}:
+    {% endif %}
     {% for participant in project.participants.all %}
     <a href="{% url 'user_profile' participant.username %}">{{participant.username}}</a>
     {% empty %}
-    Oh, il n'y a aucun participant :'(
-    {% endfor %}</br>
+        {% if user != project.maintainer %}
+            Il n'y a encore aucun participant, ajoutez vous !</br>
+        {% endif %}
+    {% endfor %}
     {% if user != project.maintainer and user not in project.participants.all %}
     <a href="{% url 'project_add_participation' project.id%}">Je participe</a>
     {% endif %}
-</p>
-<p>Description : {{project.short_description}}</p>
-<div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="{{project.progress}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:{{project.progress}}%">
-      {{project.progress}}%
+    <br>
+    <img src="{{project.picture.url}}"  class="img-thumbnail">
+  </div>
+  <div class="col-md-8 col-md-pull-4">
+    {{project.content|markdown}}
   </div>
 </div>
-<p>{{project.content|markdown}}</p>
 
 {% endblock %}
