--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+<ol class="breadcrumb">
+  <li><a href="/">UrLab</a></li>
+  <li class="active">Événements</li>
+</ol>
+
 <div class="page-header">
   <h1>Événements à UrLab</h1>
 </div>
