Small cosmetic changes

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -10,11 +10,11 @@
 
 
 <div class="page-header">
-  <h1>Projets</h1>
+  <h1>Incubateur à projets</h1>
 </div>
 <p>
-    A UrLab, on fait tout le temps des projets
-    <a href="{% url "add_project" %}">Proposer un projet</a>
+    Vous trouverez ici une grande partie des projets (en cours, sous forme de proposition ou finis) à UrLab. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
+    Vous êtes aussi invités à <a href="{% url "add_project" %}">ajouter vos propres projets</a>, n'ayez pas peur, on est ouverts à tout !
 
 </p>
 
